Code files updated

--- a/contact.html
+++ b/contact.html
@@ -8,5 +8,6 @@
 <body>
     This is contact Form
     <h1>This is contact Form</h1>
+    <h2>This is branch code Update.Hello My Name is Ajad patel.</h2>
 </body>
 </html>
